--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>REDSTORE</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -18,6 +24,23 @@
             <li><a href="">Account</a></li>
           </ul>
         </nav>
+        <img src="images/cart.png" width="30px" height="30px" />
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <h1>
+            Lorem ipsum dolor,<br />
+            an adipiscing elit !
+          </h1>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit<br />
+            esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+          <a href="" class="btn">Explore Now &#8594;</a>
+        </div>
+        <div class="col-2">
+          <img src="images/image1.png" />
+        </div>
       </div>
     </div>
   </body>
