--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
   <head>
     <title>REDSTORE</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
     />
   </head>
   <body>
@@ -40,6 +44,74 @@
         </div>
         <div class="col-2">
           <img src="images/image1.png" />
+        </div>
+      </div>
+      <div class="small-container">
+        <div class="grid">
+          <div class="row">
+            <div class="col-3">
+              <img src="images/category-1.jpg" />
+            </div>
+            <div class="col-3">
+              <img src="images/category-2.jpg" />
+            </div>
+            <div class="col-3">
+              <img src="images/category-3.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="small-container">
+        <h2 class="title">Feature products</h2>
+        <div class="row">
+          <div class="col-4">
+            <img src="images/product-1.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50.000</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-2.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50.000</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-3.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50.000</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-4.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>$50.000</p>
+          </div>
         </div>
       </div>
     </div>
