fix(): Smart Band section

--- a/index.html
+++ b/index.html
@@ -216,5 +216,30 @@
         </div>
       </div>
     </div>
+    <div class="offer">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-2">
+            <img src="images/exclusive.png" class="offer-img" />
+          </div>
+          <div class="col-2">
+            <small>Lorem Ipsum is simple</small>
+            <h1>Smart Band 4</h1>
+            <small>
+              It has been the industry's standard dummy text ever since the
+              1500s, when an unknown printer took a galley of type and scrambled
+              it to make a type specimen book. It has survived not only five
+              centuries, but also the leap into electronic typesetting,
+              remaining essentially unchanged. It was popularised in the 1960s
+              with the release of Letraset sheets containing Lorem Ipsum
+              passages, and more recently with desktop publishing software like
+              Aldus PageMaker including versions of Lorem Ipsum.</small
+            >
+            <br />
+            <a href="" class="btn"> Buy Now &#8594;</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
