fix(): brands section

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
               <i class="fas fa-star-half-alt"></i>
               <i class="far fa-star"></i>
             </div>
-            <img src="images/user-1.png">
+            <img src="images/user-1.png" />
             <h3>Sean Parker</h3>
           </div>
           <div class="col-3">
@@ -275,7 +275,7 @@
               <i class="fas fa-star-half-alt"></i>
               <i class="far fa-star"></i>
             </div>
-            <img src="images/user-2.png">
+            <img src="images/user-2.png" />
             <h3>joe jack</h3>
           </div>
           <div class="col-3">
@@ -292,8 +292,29 @@
               <i class="fas fa-star-half-alt"></i>
               <i class="far fa-star"></i>
             </div>
-            <img src="images/user-3.png">
+            <img src="images/user-3.png" />
             <h3>Mabel Ray</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="brands">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-5">
+            <img src="images/logo-godrej.png" />
+          </div>
+          <div class="col-5">
+            <img src="images/logo-coca-cola.png" />
+          </div>
+          <div class="col-5">
+            <img src="images/logo-paypal.png" />
+          </div>
+          <div class="col-5">
+            <img src="images/logo-philips.png">
+          </div>
+          <div class="col-5">
+            <img src="images/logo-oppo.png">
           </div>
         </div>
       </div>
