--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+<!--------------- Navbar -------------------->
     <div class="container">
       <div class="navbar">
         <div class="logo">
@@ -61,6 +62,7 @@
           </div>
         </div>
       </div>
+<!--------------- Feature products -------------------->
       <div class="small-container">
         <h2 class="title">Feature products</h2>
         <div class="row">
@@ -113,6 +115,7 @@
             <p>$50.000</p>
           </div>
         </div>
+<!--------------- Latest Products -------------------->
         <h2 class="title">Latest products</h2>
         <div class="row">
           <div class="col-4">
@@ -216,6 +219,7 @@
         </div>
       </div>
     </div>
+<!--------------- Offer -------------------->
     <div class="offer">
       <div class="small-container">
         <div class="row">
@@ -241,6 +245,7 @@
         </div>
       </div>
     </div>
+<!--------------- Testimonial -------------------->
     <div class="testimonial">
       <div class="small-container">
         <div class="row">
@@ -298,6 +303,7 @@
         </div>
       </div>
     </div>
+<!--------------- Brands -------------------->
     <div class="brands">
       <div class="small-container">
         <div class="row">
