--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-<!--------------- Navbar -------------------->
+    <!--------------- Navbar -------------------->
     <div class="container">
       <div class="navbar">
         <div class="logo">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-<!--------------- Feature products -------------------->
+      <!--------------- Feature products -------------------->
       <div class="small-container">
         <h2 class="title">Feature products</h2>
         <div class="row">
@@ -115,7 +115,7 @@
             <p>$50.000</p>
           </div>
         </div>
-<!--------------- Latest Products -------------------->
+        <!--------------- Latest Products -------------------->
         <h2 class="title">Latest products</h2>
         <div class="row">
           <div class="col-4">
@@ -219,7 +219,7 @@
         </div>
       </div>
     </div>
-<!--------------- Offer -------------------->
+    <!--------------- Offer -------------------->
     <div class="offer">
       <div class="small-container">
         <div class="row">
@@ -245,7 +245,7 @@
         </div>
       </div>
     </div>
-<!--------------- Testimonial -------------------->
+    <!--------------- Testimonial -------------------->
     <div class="testimonial">
       <div class="small-container">
         <div class="row">
@@ -303,7 +303,7 @@
         </div>
       </div>
     </div>
-<!--------------- Brands -------------------->
+    <!--------------- Brands -------------------->
     <div class="brands">
       <div class="small-container">
         <div class="row">
@@ -317,12 +317,55 @@
             <img src="images/logo-paypal.png" />
           </div>
           <div class="col-5">
-            <img src="images/logo-philips.png">
+            <img src="images/logo-philips.png" />
           </div>
           <div class="col-5">
-            <img src="images/logo-oppo.png">
+            <img src="images/logo-oppo.png" />
           </div>
         </div>
+      </div>
+    </div>
+    <!--------------- Footer -------------------->
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col-1">
+            <h3>Download your web app</h3>
+            <p>
+              Neque porro quisquam est qui dolorem ipsum quia dolor sit amet.
+            </p>
+            <div class="app-logo">
+              <img src="images/play-store.png">
+              <img src="images/app-store.png">
+            </div>
+          </div>
+          <div class="footer-col-2">
+            <img src="images/logo-white.png" />
+            <p>
+              Neque porro quisquam est qui dolorem ipsum quia dolor sit amet.
+            </p>
+          </div>
+          <div class="footer-col-3">
+            <h3>Useful links</h3>
+            <ul>
+              <li>Coupons</li>
+              <li>Blog Post</li>
+              <li>Return Policy</li>
+              <li>Join Affiliate</li>
+            </ul>
+          </div>
+          <div class="footer-col-4">
+            <h3>Follow Us</h3>
+            <ul>
+              <li>Facebook</li>
+              <li>Twitter</li>
+              <li>Instagram</li>
+              <li>Youtube</li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+        <p class="copyright">Copyright 2021 - Website</p>
       </div>
     </div>
   </body>
